# fap-cli

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-bot.txt  requirements-gcal.txt  requirements.txt
.github/workflows/: tests.yml
analysis/: _tables.md  api-endpoints.json
deploy/: Dockerfile  README.md  crontab.example  docker-run.sh  fap-bot.service  fap-gradewatch.service  fap-update.service  fap-update.timer  fap-watch.service  fap.service  fap.timer  register-task-windows.ps1  register-watch-windows.ps1  run-fap.cmd  run-fap.ps1  run-fap.sh  run-notify.ps1  run-notify.sh  setup-server.sh  update.ps1  update.sh
docs/: 01-reverse-engineering.md  02-auth-and-crawler.md  03-extraction-catalog.md  04-feid-oauth-tool.md  05-checksum-map.md  10-install.md  11-commands.md  12-google-calendar.md  13-notify.md  14-deploy.md  15-config.md  16-troubleshooting.md  17-architecture.md  README.md
fapc/: __init__.py  __main__.py  cli.py  config.py  fmt.py  i18n.py
fapc/app/: __init__.py  attendwatch.py  bot_core.py  cli.py  dashboard.py  discordbot.py  gcal.py  gradewatch.py  notify.py  reminders.py  telegrambot.py  webui.py
fapc/core/: __init__.py  api.py  attendance.py  auth.py  conduct.py  courses.py  extract.py  extras.py  grades.py  schedule.py  subjects.py  transcript.py  whatif.py
legacy/: credentials.json.example  fap_login.py  pull_token.py
tests/: integration_offline.py  live_smoke.py  test_logic.py
